[package]
name = "tokio-switching-sleep"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
